[package]
name = "knockknock"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.13", default-features = false, features = ["json"] }
eero-client = { git = "https://github.com/ssnover/eero-rs" }
paho-mqtt = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "signal", "time"] }
